# Medical-Transcriber

./: .gitignore  Dockerfile  Example UI.html  README.md  app.py  audio_processor.py  config.py  index.html  llm_extractor.py  pyproject.toml
app/: extractor.py  main.py  models.py  transcriber.py
